	'OK' button is now always sensitive.  Fixes #336629 and #336630.

	* src/backend/file/io-gncxml-v2.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/gnc-window.c: Work around the fact that a
	validating XML parser barfs on gnucash's use of an attribute in an
	undefined namespace.

2006-03-30  Joshua Sled  <jsled@asynchronous.org>

	* accounts/C/acctchrt_checkbook.gnucash-xea: Revoke placeholder
	status from leaf Expense account in Simple Checkbook account
	tree.  Bug#334777.

2006-03-30  Christian Stimming  <stimming@tuhh.de>

	* po/es.po: Updated Spanish translation by Eneko Lacunza
	<listas@enlar.net>

2006-03-28  Christian Stimming  <stimming@tuhh.de>

	* src/report/report-system/options-utilities.scm: Move
	gnc:options-add-subtotal-view! options from income-statement,
	account-summary, and balance-sheet to here. Try to clarify the
	wording of the option -- any native english speaker please feel
	free to correct the wording even more.

	* src/report/standard-reports/trial-balance.scm,
	income-statement.scm, equity-statement.scm: Remove unused strings.

	* src/report/standard-reports/account-summary.scm,
	balance-sheet.scm: Revert report date option to the 1.8 state
	where the stock gnc:options-add-report-date! was used and allowed
	many potential relative dates.

2006-03-27  David Hampton  <hampton@employees.org>

	* src/gnome/glade/account.glade:
	* src/gnome/druid-hierarchy.c: Change the title of the category
	view to track changes in the highlighted group name. Fixes
	reopened 334783.

2006-03-27  Christian Stimming  <stimming@tuhh.de>

	* src/register/register-gnome/gnucash-sheet.h: Stick with vertical
	padding of 2 as discussed in bug#334920. 

2006-03-25  David Hampton  <hampton@employees.org>

	* src/gnome/gnc-plugin-page-register.c:
	* src/gnome/ui/gnc-plugin-page-register-ui.xml: Add a reconcile
	button to the toolbar of a register page.  Fixes 136522.

	* src/gnome/window-reconcile.c: Add a context menu to the