@@ -48,6 +48,7 @@ typedef enum
   NOT_A_FUNC,
   PARSER_OUT_OF_MEMORY,
   NUMERIC_ERROR,
+  EXPRESSION_ERROR,
   PARSER_NUM_ERRORS
 }
 ParseError;
